[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xsideui"
dynamic = ["version"]
description = "A modern PySide2 / PySide6 component library with rich UI components and theme support"
readme = "README.md"
authors = [{ name = "heng zhi qi", email = "efupay@foxmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/yourusername/xsideui"
Documentation = "https://github.com/yourusername/xsideui#readme"
Repository = "https://github.com/yourusername/xsideui.git"

[tool.setuptools]
package-dir = {"" = "src"}